tests/NormalTests/paczka1/small_fuzzy/80015072.err
Error in line 1: 8gXu9Js3f2h A475 57,0
Error in line 4: 77XUIHaB S894 71,1
Error in line 6: CLCb3gb4f A294 28,4
